# ai_bot

./: .env.example  .gitignore  README.md  TESTING.md  alternatives_agent.py  alternatives_deep_models.py  alternatives_models.py  app.py  config.py  db.py  embeddings_client.py  events_logger.py  litellm_config.yaml  llm_client.py  logging_utils.py  main.py  metrics.py  models.py  ner.py  observability.py  orchestrator.py  otel.py  pyproject.toml  sales_agent.py  sales_models.py  sales_tools_clients.py  session_store.py  vector_index.py
agents/: alternatives_deep_research_agent.py  base.py  calculator_agent.py  circuit_breaker.py  pricing_agent.py  supervisor.py
docs/: ARCHITECTURE.md  AUDIT_REPORT.md  HANDOVER_CHECKLIST.md  OPERATIONS.md  REMEDIATION_PLAN.md  RUNBOOK.md  TRAINING_PIPELINE.md
fixtures/: golden_intents.json
integrations/: base.py  clients.py  fake.py
migrations/: 001_init_mysql.sql
procurement/: __init__.py  api.py  db.py  parser.py  schemas.py  selector.py  sender.py  service.py
rag/: __init__.py  api.py  chunking.py  corrective.py  ingest.py  knowledge_graph.py  pipeline.py  reranker.py  retrieval.py  retriever.py  self_rag.py  tool.py  vector_store.py
tests/: conftest.py  test_alternatives_agent.py  test_alternatives_deep_research.py  test_eval_runner.py  test_integration_procurement.py  test_integrations_fakes.py  test_llm_client.py  test_log_event.py  test_metrics.py  test_ner.py  test_parser.py  test_pipeline_integration.py  test_pricing_agent.py  test_procurement_unit.py  test_rag_chunking.py  test_rag_pipeline.py  test_rag_retrieval.py  test_rag_retriever.py  test_sales_agent_e2e.py  test_sales_agent_tools.py  test_supervisor.py  test_training_pipeline.py  test_vector_index.py
tools/: __init__.py  auto_label_ner.py  auto_label_rag.py  (+1 more)
(+8 files in other folders)
